--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,7 @@
 /tmp
 
 # Ignore all .idea files
-*/.idea/workspace.xml */.idea/tasks.xml
+**/.idea/workspace.xml **/.idea/tasks.xml
+
+#Ignore the seceret.yml file
+config/secrets.yml
