started adding comments

--- a/config/tinymce.yml
+++ b/config/tinymce.yml
@@ -1,3 +1,5 @@
+#Used for allowing users to format text
+#Bellow are the options for reformatting the text
 theme_advanced_toolbar_location: top
 theme_advanced_toolbar_align: left
 theme_advanced_statusbar_location: bottom
